--- a/app/blocks/map/map.scss
+++ b/app/blocks/map/map.scss
@@ -35,6 +35,10 @@
     background-color: $nd-color-gray-text7;
     border: 1px solid #b7b7b7;
 
+    @include screen('xlg', max, 2) {
+      height: pxtovw(328, 1660);
+    }
+
     @include screen('lg', max, 2) {
       height: pxtovw(328, 1366);
     }
