--- a/app/blocks/sidebar/sidebar.scss
+++ b/app/blocks/sidebar/sidebar.scss
@@ -72,6 +72,10 @@
     border-radius: 3px;
     z-index: 2;
 
+    @include screen('xlg', max, 2) {
+      border-radius: pxtovw(3, 1660);
+    }
+
     @include screen('lg', max, 2) {
       border-radius: pxtovw(3, 1366);
     }
