--- a/app/blocks/facility-list/facility-list.scss
+++ b/app/blocks/facility-list/facility-list.scss
@@ -10,6 +10,7 @@
 
   @include screen('xlg', max, 2) {
     column-count: 3;
+    column-gap: pxtovw(30, 1660);
   }
 
   @include screen('lg', max, 2) {
@@ -32,6 +33,10 @@
     column-span: none;
     transition: color $ease-main;
     margin-bottom: 27px;
+
+    @include screen('xlg', max, 2) {
+      margin-bottom: pxtovw(27, 1660);
+    }
 
     @include screen('lg', max, 2) {
       margin-bottom: pxtovw(27, 1366);
@@ -57,6 +62,11 @@
     width: 23px;
     height: 23px;
     flex: none;
+
+    @include screen('xlg', max, 2) {
+      width: pxtovw(23, 1660);
+      height: pxtovw(23, 1660);
+    }
 
     @include screen('lg', max, 2) {
       width: pxtovw(23, 1366);
@@ -86,6 +96,10 @@
     font-weight: 400;
     line-height: (26 / 18);
 
+    @include screen('xlg', max, 2) {
+      font-size: pxtovw(18, 1660);
+    }
+
     @include screen('lg', max, 2) {
       font-size: pxtovw(18, 1366);
     }
@@ -101,6 +115,10 @@
 
     &:not(:first-child) {
       margin-left: 17px;
+
+      @include screen('xlg', max, 2) {
+        margin-left: pxtovw(17, 1660);
+      }
 
       @include screen('lg', max, 2) {
         margin-left: pxtovw(19, 1366);
