--- a/app/blocks/gallery/gallery.scss
+++ b/app/blocks/gallery/gallery.scss
@@ -565,7 +565,7 @@
   font-size: 0;
   line-height: 0;
 
-  @include screen('xlg', max, 2) {
+  @include screen('lg', max, 2) {
     padding-top: 57%;
   }
 
@@ -630,6 +630,10 @@
       box-sizing: border-box;
       padding: 0 10px;
 
+      @include screen('xlg', max, 2) {
+        padding: 0 pxtovw(10, 1660);
+      }
+
       @include screen('lg', max, 2) {
         padding: 0 pxtovw(10, 1366);
       }
@@ -659,8 +663,8 @@
     transform-origin: 50% 50%;
 
     @include screen('xlg', max, 2) {
-      width: 40px;
-      height: 114px;
+      width: pxtovw(40, 1660);
+      height: pxtovw(128, 1660);
     }
 
     @include screen('lg', max, 2) {
@@ -699,8 +703,8 @@
       height: 40px;
 
       @include screen('xlg', max, 2) {
-        width: 13px;
-        height: 38px;
+        width: pxtovw(15, 1660);
+        height: pxtovw(40, 1660);
       }
 
       @include screen('lg', max, 2) {
@@ -726,8 +730,8 @@
       stroke: rgba($nd-color-border4, .7);
 
       @include screen('xlg', max, 2) {
-        width: 30px;
-        height: 40px;
+        width: pxtovw(30, 1660);
+        height: pxtovw(40, 1660);
       }
 
       @include screen('lg', max, 2) {
@@ -754,6 +758,11 @@
         filter: drop-shadow(0 1px 0 rgba(0, 0, 0, .46));
         width: 13px;
         height: 38px;
+
+        @include screen('xlg', max, 2) {
+          width: pxtovw(13, 1660);
+          height: pxtovw(38, 1660);
+        }
 
         @include screen('lg', max, 2) {
           width: pxtovw(13, 1366);
@@ -847,6 +856,10 @@
     padding: 15px;
     z-index: 3;
 
+    @include screen('xlg', max, 2) {
+      padding: pxtovw(15, 1660);
+    }
+
     @include screen('lg', max, 2) {
       padding: pxtovw(15, 1366);
     }
@@ -865,6 +878,10 @@
       left: 0;
       z-index: 3;
       padding: 11px;
+
+      @include screen('xlg', max, 2) {
+        padding: pxtovw(11, 1660);
+      }
 
       @include screen('lg', max, 2) {
         padding: pxtovw(11, 1366);
@@ -896,6 +913,10 @@
 
       &:not(:last-child) {
         margin-right: 12px;
+
+        @include screen('xlg', max, 2) {
+          margin-right: pxtovw(12, 1660);
+        }
 
         @include screen('lg', max, 2) {
           margin-right: pxtovw(12, 1366);
