--- a/app/components/content/nd-content.scss
+++ b/app/components/content/nd-content.scss
@@ -10,7 +10,7 @@
     @include grid-template-rows(auto);
 
     @include screen('xlg', max, 2) {
-      @include grid-template-columns(301px 20px calc(100% - 321px));
+      @include grid-template-columns(pxtovw(368, 1660) pxtovw(50, 1660) pxtovw(1122, 1660));
     }
 
     @include screen('lg', max, 2) {
@@ -28,7 +28,7 @@
     @include grid-template-rows(auto auto);
 
     @include screen('xlg', max, 2) {
-      @include grid-template-columns(calc(100% - 428px) 46px 382px);
+      @include grid-template-columns(pxtovw(1108, 1660) pxtovw(50, 1660) pxtovw(382, 1660));
     }
 
     @include screen('lg', max, 2) {
@@ -70,6 +70,11 @@
         padding-bottom: 142px;
 
         @include screen('xlg', max, 2) {
+          padding-left: pxtovw(96, 1660);
+          padding-bottom: pxtovw(142, 1660);
+        }
+
+        @include screen('lg', max, 2) {
           padding-left: 0;
           padding-bottom: 0;
         }
@@ -83,7 +88,7 @@
         @include grid-column(3, 4);
         @include grid-row(1, 2);
 
-        @include screen('xlg', max, 2) {
+        @include screen('lg', max, 2) {
           @include grid-row(1, 3);
         }
 
@@ -105,7 +110,7 @@
           width: 100%;
         }
 
-        @include screen('xlg', max, 2) {
+        @include screen('lg', max, 2) {
           @include grid-column(1, 2);
         }
 
@@ -114,10 +119,6 @@
         }
 
         &:not(:first-child) {
-          @include screen('xlg', max, 2) {
-            margin-top: 127px;
-          }
-
           @include screen('lg', max, 2) {
             margin-top: pxtovw(127, 1366);
           }
