base dates generate

--- a/app/blocks/scroll-form/scroll-form-v3.pug
+++ b/app/blocks/scroll-form/scroll-form-v3.pug
@@ -18,6 +18,6 @@ mixin scroll-form-v3()
     +nd-input-number({ name: 'count', value: 1 }).__counter
     +e.buttons
       +nd-button('a')(href="#reservation-request" data-rr-wrapper-target="scrollForm" data-rr-need-to-show="true").__button Request reservation
-      +nd-button('a')(href="#")._black.__button Arrange viewing
+      +nd-button('a')(href="#nd-popup-arrange-viewing" data-startdate="2020-12-10")._black.__button.js-nd-arrange-viewing Arrange viewing
     +e.note prices are exclusive of VAT
     +e.panel(data-rr-wrapper-block="scrollForm")
