--- a/app/components/offer-card/offer-card.pug
+++ b/app/components/offer-card/offer-card.pug
@@ -72,4 +72,4 @@ mixin offer-card-for-space-panel(data)
       +e.price!=(data.price.amount + ' <span class="offer-card__price-period" data-text="' + data.price.period + '" data-mobile-text="' + data.price.periodshort + '"></span>')
       +e.buttons(data-blind-zone)
         +nd-button()._h30._md-fz15.__button(href="#") Request reservation
-        +nd-button()._h30._md-fz15._black.__button.js-nd-popup(href="#nd-popup-arrange-viewing") Arrange viewing
+        +nd-button()._h30._md-fz15._black.__button.js-nd-arrange-viewing(href="#nd-popup-arrange-viewing") Arrange viewing
