dates picker code

--- a/app/components/popup-arrange-viewing/popup-arrange-viewing.pug
+++ b/app/components/popup-arrange-viewing/popup-arrange-viewing.pug
@@ -41,7 +41,8 @@ mixin nd-popup-arrange-viewing()
     +nd-popup-header
       +nd-popup-back().js-nd-popup(href="#popup-offer-types") Back
       +nd-popup-title Set viewing date/time
-    +nd-popup-content
+    +nd-popup-content()
       +e.calendar(data-dates-container)
       block
     +nd-popup-footer
+      +arrange-viewing-form
