--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -4,6 +4,7 @@ include ../blocks/address-line/address-line
 include ../blocks/address-list/address-list
 include ../blocks/address/address
 include ../blocks/all-saved/all-saved
+include ../blocks/arrange-viewing-form/arrange-viewing-form
 include ../blocks/article/article
 include ../blocks/autocomplete-list/autocomplete-list
 include ../blocks/avatar-uploader/avatar-uploader
