--- a/app/blocks/popups/nd-popup.scss
+++ b/app/blocks/popups/nd-popup.scss
@@ -165,4 +165,12 @@
       background-size: pxtovw(22, 375) pxtovw(11, 375);
     }
   }
+
+  &__footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: $nd-color-basic-light;
+  }
 }
