--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -208,7 +208,7 @@ $nd-color-border: #eaeaea;
 $nd-color-border2: #a3acba;
 $nd-color-border3: #d4dfe2;
 $nd-color-input-placeholder: #4e4e4e;
-$nd-color-border4: #d1d8da;  //#d8ddde
+$nd-color-border4: #d8ddde;  //#d8ddde #d1d8da
 $nd-color-gray: #c6c6c6;
 $nd-color-gray-text8: #515151;
 $nd-color-border5: #bfc3c5;
