--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -401,7 +401,7 @@
       }
     }
 
-    &.is-top #{$b}__label,.choices.is-item-select ~ #{$b}__label,.choices.is-open ~ #{$b}__label {
+    &.is-top #{$b}__label,.nd-choices.is-item-select ~ #{$b}__label,.nd-choices.is-open ~ #{$b}__label {
       font-size: 11px;
       line-height: (13 / 11);
       font-weight: 400;
@@ -442,7 +442,7 @@
   }
 
   &.nd-form-box_bg-white {
-    &.is-top #{$b}__label,.choices.is-item-select ~ #{$b}__label,.choices.is-open ~ #{$b}__label {
+    &.is-top #{$b}__label, .nd-choices.is-item-select ~ #{$b}__label, .nd-choices.is-open ~ #{$b}__label {
       background-color: $nd-color-basic-light;
     }
   }
