--- a/app/blocks/form-elements/nd-form-elements.pug
+++ b/app/blocks/form-elements/nd-form-elements.pug
@@ -51,9 +51,9 @@ mixin nd-textarea()
   textarea.nd-textarea&attributes(attributes)
     block
 
-//- mixin select()
-//-   select.select&attributes(attributes)
-//-     block
+mixin nd-select()
+  select.nd-select&attributes(attributes)
+    block
 
 mixin nd-checkbox(name, value, checked, required)
   +b.LABEL.nd-checkbox&attributes(attributes)
