--- a/app/components/popup-arrange-viewing/popup-arrange-viewing.pug
+++ b/app/components/popup-arrange-viewing/popup-arrange-viewing.pug
@@ -42,7 +42,9 @@ mixin nd-popup-arrange-viewing()
       +nd-popup-back().js-nd-popup(href="#popup-offer-types") Back
       +nd-popup-title Set viewing date/time
     +nd-popup-content()
-      +e.calendar(data-dates-container)
-      block
+      .nd-container
+        +e.calendar(data-dates-container)
+        block
     +nd-popup-footer
-      +arrange-viewing-form
+      .nd-container
+        +arrange-viewing-form
