--- a/app/components/search-panel/search-panel.pug
+++ b/app/components/search-panel/search-panel.pug
@@ -37,8 +37,8 @@ mixin search-panel()
         +e.note Start-up, scale-up, big business or just you – we have a perfect match for you.
       +e.FORM.block.hide(data-step="location")
         +e.locations
-          +nd-form-box('Location')._bg-white
-            +nd-input().js-autocomplete(type="text" name="location" placeholder="location" data-autocomplete-url="assets/data/locations-autocomplete.json" autocomplete="off")
+          +nd-form-box('Location')._bg-white._h40
+            +nd-input()._h40._open.js-autocomplete(type="text" name="location" placeholder="location" data-autocomplete-url="assets/data/locations-autocomplete.json" autocomplete="off")
             +autocomplete-list
         +nd-button('button', true).__button(type="submit") Show
         +e.note Search by area, tube station or the name of the space to find your match.
